2002-02-26  Richard Henderson  <rth@redhat.com>

	* config/ia64/ia64.c (nop_cycles_until): Do init_insn_group_barriers
	if we emitted a stop bit.

2002-02-26  Jakub Jelinek  <jakub@redhat.com>

	* configure.in (libgcc_visibility): Substitute.
	* configure: Rebuilt.
	* mklibgcc.in: If libgcc_visibility = yes, make libgcc.a global
	defined symbols .hidden.

2002-02-26  Jakub Jelinek  <jakub@redhat.com>

	PR debug/5770
	* dwarf2out.c (rtl_for_decl_location): Return CONST_STRING for
	STRING_CST initializer spanning the whole variable without
	embedded zeros.
	If expand_expr returned MEM, don't use it.

2002-02-25  Jakub Jelinek  <jakub@redhat.com>

	PR target/5755
	* config/i386/i386.c (ix86_return_pops_args): Only pop
	fake structure return argument if it was passed on the stack.

2002-02-25  Jason Merrill  <jason@redhat.com>

	* attribs.c (decl_attributes): Also re-layout PARM_DECL and
	RESULT_DECL.

2002-02-25  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.c (init_gcc_specs): Get -shared-libgcc along with -shared to
	link with shared_name only.
	* doc/invoke.texi (Link Options): Document new behavior.

2002-02-25  Aldy Hernandez  <aldyh@redhat.com>

        * c-typeck.c (push_init_level): Handle vectors.

2002-02-25  Alexandre Oliva  <aoliva@redhat.com>

	* config/sparc/sparc.c (const64_high_operand): Zero-extend
	operands of SPARC_SETHI_P.
	(input_operand): Likewise.
	(sparc_emit_set_const32): Likewise.
	* config/sparc/sparc.h (SPARC_SETHI_P): Disregard TARGET_ARCH64.
	(SPARC_SETHI32_P): Zero-extend operand from 32 bits.
	(CONST_OK_FOR_LETTER_P): Use SETHI32 for `K'.  Add `N' as SETHI.
	* config/sparc/sparc.md (movdi_insn_sp64_novis): Use `N'.
	(movdi_insn_sp64_vis): Likewise.
	(movdi split, movdf split): Use SETHI32.
	* doc/md.texi: Document SPARC constraints L, M and N.

2002-02-25  Aldy Hernandez  <aldyh@redhat.com>

        * config/rs6000/rs6000.md ("get_vrsave_internal"): New.
        ("*set_vrsave_internal"): use mfspr for Darwin.
